...
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="2dp">

    <!-- Activity Time block -->
    <TextView
        android:id="@+id/activityTime"
        android:text="Activity Time"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/activityName"
        android:text="Activity Name"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingStart="5dp" />

...
